feat: 健康检测接口
